24 July 2004 Sylvain Pion
- Move demo to Convex_hull_d.

22 June 2004 Sylvain Pion
- Add some missing "using base::member;" and other fixes for g++ 3.4.

27 Apr 2004 Sylvain Pion
- Fix PGCC warning.

15 Mar 2004 Andreas Fabri
- construct_Cartesian_const_iterator_d_object  -> construct_cartesian_const_iterator_d_object
- Added Construct_vertex_d

0.112 (18 Jan 2004)
- Remove CGAL_CFG_NESTED_CLASS_TEMPLATE_BUG workaround.

0.111 (18 Jan 2004)
- Rename CGAL_NULL_TMPL_ARGS to <>.

0.110 (18 Jan 2004)
- Remove obsolete workarounds for CGAL_DEFINE_ITERATOR_TRAITS_POINTER_SPEC.

0.109 (14 Jan 2004) [af]
- Added Iso_box_d and Construct_iso_box_d 

0.108 (11 Jan 2004)
- _R -> R_ to please Darwin.

0.107 (25 Nov 2003) [rursu]
- Removed Delaunay_d and Convex_hull_d files that went to Convex_hull_d package

0.106 (18 Nov 2003) [af]
- Removed erroneous precondition in PointHd.h and VectorHd.h

0.105 (17 Nov 2003)
- Changed license header for basic library files.

========================== CGAL 3.0 ========================

0.104 (22 October 2003)
- changed license header

0.103 (17 October 2003)
- remove buggy typename (spotted by MipsPro).

0.102 (26 September 2003)
- resubmission

0.101 (26 September 2003)
- resubmission

0.100 (26 September 2003)
- Added maintainer

0.99 (26 September 2003)
- New file headers.

0.98 (22 September 2003) [af]
- Added typenames in include/CGAL/Cartesian_d.h and in include/CGAL/Homogeneous_d.h

0.97 (18 September 2003) [af]
- Changed a typedef in include/CGAL/Cartesian_d.h

0.96 (17 September 2003) [af]
- Added another missing manual page

0.95 (17 September 2003) [af]
- Added missing manual page

0.94 (17 September 2003) [af]
- Added code/testsuite/doc for Kernel::CartesianConstIterator and its model in Kernel_d
0.9.98 (22 September 2003)
- Added typenames
 
0.9.93 (3 September 2003)
- In Convex_hull_d_traits_3 we have to use Intersect_3 and not Intersect_2

0.9.92 (3 September 2003)
- Added missing cstddef include for std::ptrdiff_t.
